[package]
name = "hello_cargo"
version = "0.1.0"
authors = ["Yusuke Wada <wada.yusuke@classmethod.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"

[[bin]]
name = "9000"
path = "src/9000.rs"

[[bin]]
name = "480"
path = "src/480.rs"

[[bin]]
name = "9002"
path = "src/9002.rs"

[[bin]]
name = "9008"
path = "src/9008.rs"

[[bin]]
name = "9009"
path = "src/9009.rs"

[[bin]]
name = "46"
path = "src/46.rs"


[[bin]]
name = "388"
path = "src/388.rs"

[[bin]]
name = "188"
path = "src/188.rs"

[[bin]]
name = "264"
path = "src/264.rs"

[[bin]]
name = "207"
path = "src/207.rs"

[[bin]]
name = "32"
path = "src/32.rs"

[[bin]]
name = "163"
path = "src/163.rs"


[[bin]]
name = "253"
path = "src/253.rs"

[[bin]]
name = "275"
path = "src/275.rs"

[[bin]]
name = "143"
path = "src/143.rs"

[[bin]]
name = "56"
path = "src/56.rs"

[[bin]]
name = "5"
path = "src/5.rs"

[[bin]]
name = "63"
path = "src/63.rs"

[[bin]]
name = "481"
path = "src/481.rs"

[[bin]]
name = "289"
path = "src/289.rs"

[[bin]]
name = "47"
path = "src/47.rs"

[[bin]]
name = "48"
path = "src/48.rs"

[[bin]]
name = "296"
path = "src/296.rs"

[[bin]]
name = "69"
path = "src/69.rs"

[[bin]]
name = "3"
path = "src/3.rs"

